--- a/src/component/About.css
+++ b/src/component/About.css
@@ -5,9 +5,6 @@
   overflow-x: hidden;
    display: flex;
   justify-content: center;
-
-
-
 }
 
 
@@ -25,17 +22,12 @@
    min-height:35%;
    width: 50px;
    background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) )
-
-
 }
 
 .video{
  min-width: 100%;
   min-height:100%;
   position: absolute;
-
-
-
 }
 
 
@@ -46,9 +38,6 @@
   height: 100vh;
   width: 100%;
   overflow: hidden;
-
-
-
 }
 
 .overlay-section{
@@ -70,17 +59,13 @@
  text-align: center;
  font-family: 'Dancing Script', cursive;
  font-size: 70px;
-
 }
-
-
 
 .box-p {
   color: #ffdada;
   font-size: 25px;
   margin-top: 30px;
   text-align: center;
-
 }
 
 @media(max-width: 768px) {
@@ -93,12 +78,23 @@
     min-width: 100%;
 
   }
+  .box-p  {
+    font-size: 0.8rem;
+
+  }
 
 }
 
-@media(max-width: 769px) {
+
+@media(min-width: 769px) {
   .box-p  {
-    font-size: 0.8rem;
+    font-size: 13px;
+  }
+  .box-content{
+    min-height: 50%;
+    min-width: 50%;
+    overflow-y: scroll;
+    scroll-behavior: auto;
 
   }
 }
